# network_traffic_modeler_py3

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  BUILD.md  LICENSE  README.md  TODO.md  TODO.py  http_server.py  lsp_model_test_file.csv  lsp_practice_code.py  network_modeling_client_code_examples.py  network_modeling_client_code_examples_read_from_dict.py  network_modeling_client_code_examples_read_from_model_file.py  requirements.txt  requirements_dev.txt  sample_network_model_file v2.csv  sample_network_model_file.csv  setup.cfg  setup.py  simple_user_interface.py
docs/: api.rst  changelog.rst  conf.py  demand.rst  development.rst  development_notes.md  examples.rst  index.rst  install.rst  interface.rst  model.rst  model_file.rst  rsvp_lsp.rst  srlg.rst  visualization.rst  workflows.rst
examples/: failure_scenario_visualization_example.py  flex_model_parallel_source_dest_lsps.csv  igp_shortcuts_manual_metrics_prototype.py  igp_shortcuts_model_mult_lsps_in_path.csv  igp_shortcuts_model_mult_lsps_in_path_parallel_links_2.csv  igp_shortcuts_prototype.py  interactive_visualization_example.py  load_big_model_multidigraph.py  load_big_model_perf_model.py  lsp_manual_metric_perf_model_prototype.py  lsp_model_test_file.csv  lsp_practice_code.py  model_test_topology_flexmodel.csv  model_test_topology_multidigraph.csv  multidigraph_prototyping.py  network_modeling_client_code_examples_read_from_dict.py  network_modeling_client_code_examples_read_from_model_file.py  network_modeling_with_visualization.py  network_visualization.html  requirements.txt  (+7 more)
(+189 files in other folders)
