[metadata]
description-file = README.md

[tool:pytest]
addopts = -p no:warnings --flake8 --cov-report term-missing --cov-report xml --cov=pyNTM/ test/ pyNTM/ -v

[flake8]
ignore = E226,E302,E41,W504
max-line-length = 120
max-complexity = 18
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    dist,
    examples
